# neurotechx-website

./: .gitattributes  .pre-commit-config.yaml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yaml  deploy.yaml  deployment.yaml  manual_deployment.yaml  workflows.yaml
infra/: .gitignore  .terraform.lock.hcl  apis.tf  backend.hcl  cache.tf  cd.tf  cloudinit.tftpl  cloudinit.yaml  cluster.tf  database.tf  dns.tf  ingress.tf  local_init.sh  local_plan.sh  locals.tf  main.tf  monitoring.tf  network.tf  outputs.tf  providers.tf  secrets.tf  variables.tf  variables_apps.tf  variables_core.tf  versions.tf  website.tf
infra/env/: .gitignore  dev.conf  dev.tfvars  prod.tfvars  staging.tfvars
infra/modules/cache/: main.tf  outputs.tf  variables.tf
infra/modules/cicd/: main.tf  outputs.tf  variables.tf
infra/modules/database/: main.tf  outputs.tf  variables.tf
infra/modules/helm/: main.tf  outputs.tf
infra/modules/ingress/: main.tf  outputs.tf  variables.tf
infra/modules/monitoring/: main.tf  outputs.tf  variables.tf
infra/settings/: settings.prod.env
neurotechx-website/: DOCKERFILE  main.py  pyproject.toml
ops/: .gitignore  compose.yaml
ops/prometheus/: prometheus.yaml
scripts/: bootstrap.sh
web/: .gitignore  DOCKERFILE  Dockerfile  manage.py  pyproject.toml
web/backend/core/: views.py
web/backend/core/templates/: index.html
web/neurotechx_site/: .env  manage.py  settings.py  urls.py  wsgi.py
web/neurotechx_site/middleware/: traefik_remote_user.py
